Prevent scrollbar when accepting invitation

--- a/orga/app/styles/components/login-form.scss
+++ b/orga/app/styles/components/login-form.scss
@@ -53,7 +53,7 @@
   }
 
   form {
-    width: 430px;
+    max-width: 430px;
     margin: auto;
 
     .input {
